@startuml
skinparam linetype ortho

entity paper {
  * paper_id : STR
  ---
  title : STR
  abstract: STR
  source_reference: STR <<NULL>>
  url: STR <<NULL>>
  public_date : DATE 
  created_at : DATE 
  last_modified : DATE
}

entity LLMPrompt {
  * prompt_id : STR
  ---
  name: STR
  prompt: STR
}

entity Paper_LLMSummary {
  * paper_id : STR
  * LLMPrompt: STR
  ---
  summary: STR
}

entity paper_metainfo {
  * paper_id : STR
  ---
  visible: BOOL
  cloudfilepath:  TEXT
}


entity category {
  * category_id : STR
    ---
    category: STR
}


entity paper_auther {
  * paper_id : STR
  * auther_id : STR
    ' ---
}

entity paper_category {
  * paper_id : STR
  * category_id : STR
    ' ---
}

entity auther {
  * auther_id : STR
  ---
  name : STR
  affiliation: STR <<NULL>>
  version: STR
}

entity chapter {
  * paper_id : STR
  * chapter_id: STR
  ---
  title: STR
  content: STR
  summary: STR
}

paper ||--o{ chapter
paper ||--o{ paper_auther
paper ||--|| paper_metainfo
auther ||--o{ paper_auther

paper ||--o{ paper_category
category ||--o{ paper_category

paper ||--{ Paper_LLMSummary
LLMPrompt ||--{ Paper_LLMSummary

' techniques || 

@enduml
